--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
@@ -382,7 +382,7 @@
                         <Switch TValue="bool" @bind-Checked="UpdateItemDto.IsReturnable"></Switch>
                     </div>
                 </div>
-                <div class="row">
+              @*   <div class="row">
                     <div class="col-3">
                         <label>@L["ShippingMethod"]</label>
                     </div>
@@ -394,7 +394,7 @@
                                     ValueField="@((item)=>item.Id)"
                         @bind-SelectedValue="@UpdateItemDto.ShippingMethodId" />
                     </div>
-                </div>
+                </div> *@
                 <div class="row">
                     <div class="col-3">
                         <label>@L["TaxType"]</label>
