--- a/src/Kooco.Pikachu.Blazor/Pages/LogisticsManagement/LogisticsProviderSettings.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/LogisticsManagement/LogisticsProviderSettings.razor
@@ -212,7 +212,7 @@
                     }
                 </div>
             </div>
-            <div class="row">
+         @*    <div class="row">
                 <div class="col-3">
                     <label for="h-threshold" class="form-label">@L["FreeShippingThreshold"]<span class="text-danger"> *</span></label>
                 </div>
@@ -220,7 +220,7 @@
                     <InputNumber id="h-threshold" class="form-control" @bind-Value="HomeDelivery.FreeShippingThreshold" min="0" DisplayName="Free Shipping Threshold"></InputNumber>
                     <ValidationMessage For="@(() => HomeDelivery.FreeShippingThreshold)" />
                 </div>
-            </div>
+            </div> *@
             <div class="row">
                 <div class="col-3">
                     <label for="h-freight" class="form-label">@L["Freight"]<span class="text-danger"> *</span></label>
