--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -364,63 +364,28 @@
                 @L["ShippingMethod"]
             </div>
             <div class="col-8">
-                <SelectList TItem="string"
-                            TValue="string"
-                            Data="@ShippingMethods"
-                            TextField="@((item)=>item)"
-                            ValueField="@((item)=>item)"
-                                    Multiple
-                             @bind-SelectedValues="@ItemTags"
-                             DefaultItemDisabled="true"
-                             ItemDisabled="(item) => IsItemDisabled(item)"
-                             DefaultItemText="Select Shipping Methods" />
-             @*   <Select    class="form-select" multiple SelectedValues="@ItemTags" SelectedValuesChanged="@HandleItemTagInputKeyUp"  >
-                     @foreach(var item in Enum.GetNames(typeof(DeliveryMethod)))
+                @if(EditGroupBuyDto.AllowShipToOuterTaiwan && !EditGroupBuyDto.AllowShipOversea)
             {
-                   if(item==Enum.GetName(DeliveryMethod.SevenToElevenC2C))
-                   {
-                   
-                     <SelectItem Disabled="@ItemTags.Any(x=>x==Enum.GetName(DeliveryMethod.SevenToEleven))"  Value="@item">@item</SelectItem>
-                   
-                   }
-                   else if (item==Enum.GetName(DeliveryMethod.SevenToEleven))
-                   {
-                   
-                     <SelectItem Disabled="@ItemTags.Any(x=>x==Enum.GetName(DeliveryMethod.SevenToElevenC2C))"  Value="@item">@item</SelectItem>
-                   
-                   }
-                    else if (item==Enum.GetName(DeliveryMethod.FamilyMart))
-                   {
-                   
-                     <SelectItem Disabled="@ItemTags.Any(x=>x==Enum.GetName(DeliveryMethod.FamilyMartC2C))"  Value="@item">@item</SelectItem>
-                   
-                   } 
-                   else if (item==Enum.GetName(DeliveryMethod.FamilyMartC2C))
-                   {
-                   
-                     <SelectItem Disabled="@ItemTags.Any(x=>x==Enum.GetName(DeliveryMethod.FamilyMart))"  Value="@item">@item</SelectItem>
-                   
-                   }
-                   else{
-                       <SelectItem  Value="@item">@item</SelectItem>
-                   }
-                   
-
+             @foreach(var item in Enum.GetNames(typeof(DeliveryMethod)))
+              {
+                  if(item==Enum.GetName(DeliveryMethod.SevenToElevenC2C)||item==Enum.GetName(DeliveryMethod.SevenToEleven1)||item==Enum.GetName(DeliveryMethod.BlackCat))
+                  {
+               <label for="@item" class="form-label me-2">
+                                <input type="checkbox" class="form-check-input me-1" id="@item" checked="@((EditGroupBuyDto.ExcludeShippingMethod != null) && (EditGroupBuyDto.ExcludeShippingMethod.Contains(item)))" @onchange="(value) => OnShippingMethodCheckedChange(item, value)" />
+                                @L[item]
+                            </label>
+              }
+              }
             }
-                     
-                </Select>   *@
-                @*  <div class="col-7 form-control"  style="background-color:white">
-                    @foreach (var item in ItemTags)
-                    {
-                        <Badge class="item-tags" CloseClicked="@(() => HandleItemTagDelete(item))">@item</Badge>
-                    }
-                    <div class="input-container">
-                        <input type="text" id="tag-input" class="tag-input" placeholder="New Tag"
-                        @bind-value="TagInputValue"
-                        @onkeyup="HandleItemTagInputKeyUp" />
-                        <i class="tag-input-placeholder-icon fa fa-plus"></i>
-                    </div>
-                </div> *@
+            else{
+              @foreach(var item in Enum.GetNames(typeof(DeliveryMethod)))
+              {
+               <label for="@item" class="form-label me-2">
+                                <input type="checkbox" class="form-check-input me-1" id="@item" checked="@((EditGroupBuyDto.ExcludeShippingMethod != null) && (EditGroupBuyDto.ExcludeShippingMethod.Contains(item)))" @onchange="(value) => OnShippingMethodCheckedChange(item, value)" />
+                                @L[item]
+                            </label>
+              }
+           }
             </div>
         </div>
       
