--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
@@ -182,6 +182,14 @@
                                             }
                                         </tr>
                                         <tr>
+                                            <td>@L["RecipientPostalCode"]</td>
+                                            <td>@Order.PostalCode</td>
+                                        </tr>
+                                        <tr>
+                                            <td>@L["RecipientCity"]</td>
+                                            <td>@Order.City</td>
+                                        </tr>
+                                        <tr>
                                             <td>@L["RecipientAddress"]</td>
                                             @if (ModificationTrack.IsAddressInputVisible)
                                             {
