--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -370,7 +370,7 @@
               {
                   if(item==Enum.GetName(DeliveryMethod.SevenToElevenC2C)||item==Enum.GetName(DeliveryMethod.SevenToEleven1)||item==Enum.GetName(DeliveryMethod.BlackCat))
                   {
-               <label for="@item" class="form-label me-2">
+               <label for="@item" class="form-label ">
                                 <input type="checkbox" class="form-check-input me-1" id="@item" checked="@((EditGroupBuyDto.ExcludeShippingMethod != null) && (EditGroupBuyDto.ExcludeShippingMethod.Contains(item)))" @onchange="(value) => OnShippingMethodCheckedChange(item, value)" />
                                 @L[item]
                             </label>
@@ -380,7 +380,7 @@
             else{
               @foreach(var item in Enum.GetNames(typeof(DeliveryMethod)))
               {
-               <label for="@item" class="form-label me-2">
+               <label for="@item" class="form-label">
                                 <input type="checkbox" class="form-check-input me-1" id="@item" checked="@((EditGroupBuyDto.ExcludeShippingMethod != null) && (EditGroupBuyDto.ExcludeShippingMethod.Contains(item)))" @onchange="(value) => OnShippingMethodCheckedChange(item, value)" />
                                 @L[item]
                             </label>
@@ -402,7 +402,7 @@
                     {
                         @foreach(var island in DeliveryTimeConts.SelfPickUp)
                         {
-                            <label for="@island" class="form-label me-2">
+                            <label for="@island" class="form-label">
                             <input type="checkbox" class="form-check-input me-1" id="@island" checked="@(EditGroupBuyDto.SelfPickupDeliveryTime != null && EditGroupBuyDto.SelfPickupDeliveryTime.Contains(island))" @onchange="(value) => SelfPickupDeliveryTimeCheckedChange(island, value)" />
                                 @L[island]
                             </label>
@@ -421,7 +421,7 @@
                     {
                         @foreach(var island in DeliveryTimeConts.BlackCat)
                         {
-                            <label for="@island" class="form-label me-2">
+                            <label for="@island" class="form-label">
                                 <input type="checkbox" class="form-check-input me-1" id="@island" checked="@(EditGroupBuyDto.BlackCatDeliveryTime != null && EditGroupBuyDto.BlackCatDeliveryTime.Contains(island))" @onchange="(value) => BlackCatDeliveryTimeCheckedChange(island, value)"   />
                                 @L[island]
                             </label>
@@ -440,7 +440,7 @@
                     {
                         @foreach(var island in DeliveryTimeConts.HomeDelivery)
                         {
-                            <label for="@island" class="form-label me-2">
+                            <label for="@island" class="form-label">
                                 <input type="checkbox" class="form-check-input me-1" id="@island" checked="@(EditGroupBuyDto.HomeDeliveryDeliveryTime != null && EditGroupBuyDto.HomeDeliveryDeliveryTime.Contains(island))" @onchange="(value) => HomeDeliveryTimeCheckedChange(island, value)"   />
                                 @L[island]
                             </label>
