--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -454,7 +454,7 @@
             <div class="col-4">  
                
                     <Check   TValue="bool" @bind-Checked="@CreditCard">@L["CreditCard"]</Check>
-                   <Check  TValue="bool" @bind-Checked="@BankTransfer">@L["BnakTransfer"]</Check>
+                   <Check  TValue="bool" @bind-Checked="@BankTransfer">@L["BankTransfer"]</Check>
                
             </div>
         </div>
