--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -405,7 +405,7 @@
                             <SelectList TItem="EnumValueDto"
                                         TValue="int"
                                         Data="@TaxTypes"
-                                        TextField="@((item)=>item.Text)"
+                                        TextField="@((item)=>L[item.Text])"
                                         ValueField="@((item)=>item.Id)"
                             @bind-SelectedValue="@CreateItemDto.TaxTypeId" />
                         </div>
